--- a/app/views/form_section/_audio_upload_box.html.erb
+++ b/app/views/form_section/_audio_upload_box.html.erb
@@ -2,9 +2,8 @@
   <div class="file medium-4 columns">
     <%= label_tag "#{formObject.class.name.underscore.downcase}[audio]", "Recorded Audio", :class=>'key inline' %>
   </div>
-  <div class="medium-8 columns">
-    <%= file_field_tag "#{formObject.class.name.underscore.downcase}[audio]" %>
-
+  <div class="medium-8 columns file_upload">
+    <%= render "form_section/file_input", name: "#{formObject.class.name.underscore.downcase}[audio]", id: "#{formObject.class.name.underscore.downcase}_audio", help_text: ""%>
     <ul class="audio_player_section">
       <%= render :partial => "form_section/field_display_audio", :locals => {:field => nil, :formObject => formObject, :display_audio_delete_checkbox => true} %>
     </ul>
