--- a/app/views/form_section/_photo_upload_box.html.erb
+++ b/app/views/form_section/_photo_upload_box.html.erb
@@ -10,11 +10,9 @@
           <%= label_tag "#{formObject.class.name.underscore.downcase}[photo]0", "Add Photo", :class=>'key inline' %>
         </span>
       </div>
-      <div class="medium-8 columns">
+      <div class="medium-8 columns file_upload">
         <div>
-          <%= file_field_tag "#{formObject.class.name.underscore.downcase}[photo]0" %>
-
-          <%= image_tag "new/icon_help.png", title: photo_upload_box.help_text, class: 'tool-tip-icon vtip' if photo_upload_box.help_text.present? %>
+          <%= render "form_section/file_input", name: "#{formObject.class.name.underscore.downcase}[photo]0", id: "#{formObject.class.name.underscore.downcase}_photo_0", help_text: photo_upload_box.help_text || ""%>
         </div>
       </div>
   </div>
