Fixed subform headers form showing the option id instead of the value.

--- a/app/views/form_section/_subform_expand_collapse_header.html.erb
+++ b/app/views/form_section/_subform_expand_collapse_header.html.erb
@@ -29,7 +29,7 @@
              fields_id << "#{subform.subform.name.dehumanize}_#{sanitize_to_id(name)}"
 
              #field_type will be used to identify how to retrieve the changes in the subform fields
-             #to update the static text placeholder if the field was changed by the user and the user 
+             #to update the static text placeholder if the field was changed by the user and the user
              #collapsed the subform.
              field_type = field.type
              field_type = "chosen" if field.type == "select_box" and field.multi_select == true
@@ -38,7 +38,11 @@
 
            #retrieve the value of the fields.
            value = i.to_s == "template" ? "" : field_value(formObject, field, fk)
-           value_to_display = field_value_for_display value
+           if field['option_strings_text_en'].present? && field['option_strings_text_en'].is_a?(Array)
+            value_to_display = field_value_for_multi_select value, field
+           else
+            value_to_display = field_value_for_display value
+           end
            value_fields << value_to_display
          end
       %>
@@ -50,7 +54,7 @@
       <span data-fields="<%= fields_id.join(',') %>" data-types="<%= data_types.join(',') %>">
         <%= value_fields.reject(&:empty?).join(' - ') %>
       </span>
-      <% end %>      
+      <% end %>
     </div>
   </div>
   <div class="medium-4 columns">
