--- a/app/views/form_section/_date_field.html.erb
+++ b/app/views/form_section/_date_field.html.erb
@@ -12,7 +12,7 @@
     </span>
   </div>
   <div class="medium-8 columns">
-    <%= text_field_tag name, value, :class => 'form_date_field has_help', :id => field_id, :disabled => date_field.editable == false ? true : false %>
+    <%= text_field_tag name, value, :class => 'form_date_field has_help', :id => field_id, :disabled => date_field.editable == false ? true : false, :editable => date_field.editable %>
     <p class="help"><%= t("fields.date_help") %></p>
   </div>
 </div>
