--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,27 +1,1 @@
-<h4 class="text-center">&lt;Placeholder for <%= I18n.t("navigation.reports") %>&gt;</h4>
-
-<h1 class="no_border float_left"><%= @page_name %></h1>
-
-<div class="page-content-new">
-  <div class="side-tab-content full_width">
-    <table id="reports" class="list_table">
-      <thead>
-        <tr>
-          <th><%= t "report.name" %></th>
-          <th><%= t "report.description" %></th>
-          <th><%= t "report.download" %></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @reports.each do |report| %>
-          <tr>
-            <td class="report_type"><%= t report.report_type, :scope => "report.types" %></td>
-            <td class="as_of_date"><%= l report.as_of_date, :format => :long %></td>
-            <td class="download"><%= link_to t("report.download"), report_path(report) %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-
-  </div>
-</div>
+<%= render 'record_shared/list_view_table', model: Report, record: 'report', collection: @reports %>
