--- a/app/views/exports/_button.html.erb
+++ b/app/views/exports/_button.html.erb
@@ -3,7 +3,7 @@
   <%= link_to t("buttons.export"), '#', class: 'has_sub' %>
   <ul style="display:none;">
     <% Exporters::active_exporters_for_model(controller.model_class).each do |exporter| %>
-      <% if exporter_visible_page?(exporter.id) %>
+      <% if exporter_visible_page?(exporter.id, defined?(instance) ? [instance.module_id] : @current_modules.map{|m| m.id}) %>
       <li>
       <%= link_to(t("exports.#{exporter.id}.#{defined?(instance) ? 'one' : 'all'}"),
                     url_for(:format => exporter.id, :page => "all", :per_page => :all, :id => (defined?(instance) ? instance.id : nil), :params => exporter_params_page(exporter.id, params)),
