Scrollbars for sidenav, filters, and dashboard

--- a/app/views/incidents/edit.html.erb
+++ b/app/views/incidents/edit.html.erb
@@ -17,15 +17,15 @@
 <div class="clearfix"></div>
 
 <%= form_tag incident_path(@incident), :method => :put, :multipart => true, :class => "edit-profile default-form data-form incident-form", :autocomplete => "off" do %>
-  <div class="page-content-new row collapse" data-equalizer>
+  <div class="page-content-new row collapse">
     <div class="large-4 medium-4 columns close-side-tab side-tab-container">
-      <div class="side-tab" data-equalizer-watch>
+      <div class="side-tab">
         <%= render :partial => 'form_section/tabs', :object => @form_sections, locals: { show_summary: true } %>
       </div>
     </div>
 
     <div class="large-8 medium-8 columns side-tab-content-container">
-      <div class="side-tab-content" data-equalizer-watch>
+      <div class="side-tab-content">
         <%= hidden_field_tag('incident[base_revision]', @incident._rev) %>
         <% @form_sections.each do |form_group_name, form_list| %>
           <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @incident, :form_group_name => form_group_name} %>
