--- a/app/views/children/edit.html.erb
+++ b/app/views/children/edit.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% content_for :record_sub_nav_controls do %>
-  <%= render_controls(@child, 'cases') %>  
+  <%= render_controls(@child, 'cases') %>
 <% end %>
 
 <% content_for :breadcrumbs do %>
@@ -17,15 +17,15 @@
 <div class="clearfix"></div>
 
 <%= form_tag child_path(@child), :method => :put, :multipart => true, :class => "edit-profile default-form data-form", :autocomplete => "off" do %>
-  <div class="page-content-new row collapse" data-equalizer>
+  <div class="page-content-new row collapse">
     <div class="large-4 medium-4 columns close-side-tab side-tab-container">
-      <div class="side-tab" data-equalizer-watch>
+      <div class="side-tab">
         <%= render :partial => 'form_section/tabs', :object => @form_sections %>
       </div>
     </div>
 
     <div class="large-8 medium-8 columns side-tab-content-container">
-      <div class="side-tab-content" data-equalizer-watch>
+      <div class="side-tab-content">
         <%= hidden_field_tag('child[base_revision]', @child._rev) %>
         <% @form_sections.each do |form_group_name, form_list| %>
           <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @child, :form_group_name => form_group_name} %>
