--- a/app/views/children/new.html.erb
+++ b/app/views/children/new.html.erb
@@ -7,15 +7,15 @@
 <% end %>
 
 <%= form_tag children_path, :multipart => true, :class => "default-form data-form", :autocomplete => "off" do %>
-    <div class="page-content-new row collapse" data-equalizer>
+    <div class="page-content-new row collapse">
   	<%= hidden_field_tag "child[posted_from]", "Browser" %>
       <div class="large-4 medium-4 columns close-side-tab side-tab-container">
-        <div class="side-tab" data-equalizer-watch>
+        <div class="side-tab">
           <%= render :partial => 'form_section/tabs', :object => @form_sections %>
         </div>
       </div>
       <div class="large-8 medium-8 columns side-tab-content-container">
-        <div class="side-tab-content" data-equalizer-watch>
+        <div class="side-tab-content">
           <% @form_sections.each do |form_group_name, form_list| %>
             <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @child, :form_group_name => form_group_name} %>
           <% end %>
