--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -3,25 +3,25 @@
 <% end %>
 
 <% content_for :record_sub_nav_controls do %>
-  <%= render_controls(@incident) %> 
+  <%= render_controls(@incident) %>
 <% end %>
 
 <%= form_tag incidents_path, :multipart => true, :class => "default-form data-form", :autocomplete => "off" do %>
-    <div class="page-content-new row collapse" data-equalizer>
+    <div class="page-content-new row collapse">
   	<%= hidden_field_tag "incident[posted_from]", "Browser" %>
       <div class="large-4 medium-4 columns close-side-tab side-tab-container">
-        <div class="side-tab" data-equalizer-watch>
+        <div class="side-tab">
           <%= render :partial => 'form_section/tabs', :object => @form_sections %>
         </div>
       </div>
       <div class="large-8 medium-8 columns side-tab-content-container">
-        <div class="side-tab-content" data-equalizer-watch>
+        <div class="side-tab-content">
           <% @form_sections.each do |form_group_name, form_list| %>
             <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @incident, :form_group_name => form_group_name} %>
           <% end %>
         </div>
       </div>
-    </div>    
+    </div>
     <div class="clearfix"></div>
 <% end %>
 
