--- a/app/views/tracing_requests/new.html.erb
+++ b/app/views/tracing_requests/new.html.erb
@@ -2,24 +2,24 @@
   <%= t("tracing_request.register_new_tracing_request") %>
 <% end %>
 <% content_for :record_sub_nav_controls do %>
-  <%= render_controls(@tracing_request) %> 
+  <%= render_controls(@tracing_request) %>
 <% end %>
 <%= form_tag tracing_requests_path, :multipart => true, :class => "default-form data-form", :autocomplete => "off" do %>
-    <div class="page-content-new row collapse" data-equalizer>
+    <div class="page-content-new row collapse">
   	<%= hidden_field_tag "tracing_request[posted_from]", "Browser" %>
       <div class="large-4 medium-4 columns close-side-tab side-tab-container">
-        <div class="side-tab" data-equalizer-watch>
+        <div class="side-tab">
           <%= render :partial => 'form_section/tabs', :object => @form_sections %>
         </div>
       </div>
       <div class="large-8 medium-8 columns side-tab-content-container">
-        <div class="side-tab-content" data-equalizer-watch>
+        <div class="side-tab-content">
           <% @form_sections.each do |form_group_name, form_list| %>
             <%= render :partial => 'form_section/form_section', :collection => form_list,  :locals => {:formObject => @tracing_request, :form_group_name => form_group_name} %>
           <% end %>
         </div>
       </div>
-    </div>    
+    </div>
     <div class="clearfix"></div>
 <% end %>
 
