--- a/app/views/form_section/_sidebar.html.erb
+++ b/app/views/form_section/_sidebar.html.erb
@@ -1,15 +1,17 @@
 <div class="large-4 medium-4 columns close-side-tab side-tab-container">
   <div class="side-tab" data-equalizer-watch>
-    <ul class="side-nav">
-      <li class=<%= (highlight_page == 'forms' ? 'current' : '') %>>
-        <%= link_to I18n.t("navigation.forms"), form_sections_path if can?(:manage, FormSection)%>
-      </li>
-      <li class=<%= (highlight_page == 'lookups' ? 'current' : '') %>>
-        <%= link_to I18n.t("navigation.lookups"), lookups_path if can?(:manage, Lookup)%>
-      </li>
-      <li class=<%= (highlight_page == 'locations' ? 'current' : '') %>>
-        <%= link_to I18n.t("navigation.locations"), locations_path if can?(:manage, Location)%>
-      </li>
-    </ul>
+    <div class="side-nav-container">
+      <ul class="side-nav">
+        <li class=<%= (highlight_page == 'forms' ? 'current' : '') %>>
+          <%= link_to I18n.t("navigation.forms"), form_sections_path if can?(:manage, FormSection)%>
+        </li>
+        <li class=<%= (highlight_page == 'lookups' ? 'current' : '') %>>
+          <%= link_to I18n.t("navigation.lookups"), lookups_path if can?(:manage, Lookup)%>
+        </li>
+        <li class=<%= (highlight_page == 'locations' ? 'current' : '') %>>
+          <%= link_to I18n.t("navigation.locations"), locations_path if can?(:manage, Location)%>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
