--- a/app/views/form_section/_tabs.html.erb
+++ b/app/views/form_section/_tabs.html.erb
@@ -1,8 +1,12 @@
-<ul class="tab-handles side-nav">
-  <% tabs.each do |form_group, forms| %>
-    <%= build_form_tabs(form_group, forms, show_summary ||= false) %>
-  <% end %>
-  <li>
-		<%= yield :header_message %>
-  </li>
-</ul>
+<div class="side-nav-container">
+  <div class="scrolling_indicator up"><%= t('messages.scroll_up') %></div>
+  <ul class="tab-handles side-nav">
+    <% tabs.each do |form_group, forms| %>
+      <%= build_form_tabs(form_group, forms, show_summary ||= false) %>
+    <% end %>
+    <li>
+  		<%= yield :header_message %>
+    </li>
+  </ul>
+  <div class="scrolling_indicator down"><%= t('messages.scroll_down') %></div>
+</div>
