PRIMERO-794 QA17 - Other Documents Issues.
1. Make the text fit in the box.
2. default text was not displaying correctly. The attribute name was misspelled.

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -172,6 +172,29 @@ fieldset {
     }
   }
 
+  #file_container {
+    label.file-name {
+      word-wrap: break-word;
+    }
+  }
+
+  .update_document {
+    span.document {
+      word-wrap: break-word;
+    }
+  }
+
+  .uploaded-documents {
+    .row {
+      a.document {
+        word-wrap: break-word;
+      }
+      span.document-description {
+        word-wrap: break-word;
+      }
+    }
+  }
+
   label {
     font-weight: bold;
   }
