--- a/app/views/form_section/_document_upload_box.html.erb
+++ b/app/views/form_section/_document_upload_box.html.erb
@@ -18,7 +18,7 @@
       </div>
       <div class="medium-8 columns">
         <div>
-          <span><%= document["file_name"] %></span>
+          <span class="document"><%= document["file_name"] %></span>
         </div>
       </div>
       <div class="medium-4 columns">
