--- a/app/views/tracing_requests/_summary_row.html.erb
+++ b/app/views/tracing_requests/_summary_row.html.erb
@@ -1,13 +1,16 @@
 <tr>
   <td class="select_record"><input type="checkbox" class="select_record" value="<%= record.id %>" id="<%= text_to_identify_child record %>"></td>
-  <td id="tracing_request_<%= record.id %>" class="id_column">
-    <%= link_to text_to_identify_tracing_request(record), tracing_request_path(record), class: 'id_link' %>
+  <td>
     <% if record.flagged? && record.flag_count > 0 %>
       <div class="flag_icon">
         <%= record.flag_count %>
       </div>
     <% end %>
   </td>
+  <td id="tracing_request_<%= record.id %>" class="id_column">
+    <%= link_to text_to_identify_tracing_request(record), tracing_request_path(record), class: 'id_link' %>
+  </td>
   <td><%= record.relation_name %></td>
   <td><%= field_format_date(record.inquiry_date) %></td>
+  <td><%= render 'summary_row_children', record: record %></td>
 </tr>
