Added meta tag to disable auto translations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=3.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="google" value="notranslate" />
 
   <title><%= @page_name %></title>
   <link rel="shortcut icon" href="/favicon.ico?v=2"/>
