--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -145,6 +145,8 @@
             <%= render :partial => 'form_section/add_field', :locals => {:div_id => "field_details_select_box", :fields => [{:display_name => :text_field}, {:name => :text_field}, {:help_text => :text_area},
                                                                                                                             {:option_strings_text => :text_area}, {:option_strings_source => :select_box}] } %>
             <%= render :partial => 'form_section/add_field', :locals => {:div_id => "field_details_tally", :fields => [{:display_name => :text_field}, {:name => :text_field}, {:help_text => :text_area}, {:tally => :tally_field}] } %>
+            <%= render :partial => 'form_section/add_field', :locals => {:div_id => "field_details_tick_box", :fields => [{:display_name => :text_field}, {:name => :text_field}, {:help_text => :text_area},
+                                                                                                                          {:tick_box_label => :text_field}] } %>
             <%
               #TODO
               # handle hidden text fields
