--- a/app/views/form_section/_tick_box.html.erb
+++ b/app/views/form_section/_tick_box.html.erb
@@ -3,6 +3,7 @@
   name = field_tag_name formObject, tick_box, field_keys
   field_id = "#{tick_box.form.name.dehumanize}_#{sanitize_to_id name}"
   value ||= field_value formObject, tick_box, field_keys
+  label = tick_box.tick_box_label
 %>
 
 <div class="row">
@@ -12,6 +13,7 @@
 
   <div class="medium-8 columns">
     <%= check_box_tag name, "true", value == true, :id => field_id, :class => "tick_box" %>
+    <%= label_tag field_id, label, class: "tick_box_label" if label.present? %>
     <%= hidden_field_tag name, "false", :id => "#{field_id}_" %>
   </div>
 
