--- a/app/assets/stylesheets/primero/sidetab.scss
+++ b/app/assets/stylesheets/primero/sidetab.scss
@@ -57,7 +57,8 @@ li.group.current {
 }
 
 li.group a.group:after {
-  content: '+';
+  font-family: 'FontAwesome';
+  content: '\f106';
   float: right;
   color: #ccc;
   font-size: .9rem;
@@ -83,23 +84,25 @@ li.current {
   }
 
   a.group:after {
-    content: '-';
-    float: right;
-    color: $green_color;
-    font-size: 1.4rem;
-    margin-top: -8px
-  }
-
-  a.non-group:after {
-    content: '\25BA';
+    font-family: 'FontAwesome';
+    content: '\f107';
     float: right;
     color: $green_color;
     font-size: .9rem;
-    padding: 2px 0 4px;
+  }
+
+  a.non-group:after {
+    font-family: 'FontAwesome';
+    content: '\f105';
+    float: right;
+    color: $green_color;
+    font-size: .9rem;
+    padding: 1px 0 4px;
   }
 
   ul li.current a:after {
-    content: '\25BA';
+    font-family: 'FontAwesome';
+    content: '\f105';
     float: right;
     color: $green_color;
     font-size: .9rem;
