css fixes to form field edit modal

--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -104,9 +104,9 @@
   <div class="sidebar_help">
     <%= @field.present? && @field.type.present? ? t("form_section.modal_sidebar_help_selected") : t("form_section.modal_sidebar_help") %>
   </div>
-  <div class="row collapse" data-equalizer>
-    <div class="medium-3 columns side-tab-container">
-      <div class="modal-side-tab" data-equalizer-watch>
+  <div class="row collapse">
+    <div class="medium-3 columns">
+      <div class="modal-side-tab">
         <ul class="field_types side-nav modal-side-nav">
           <% if @field.present? && @field.type.present? %>
             <li class="current"><%= link_to t("fields.#{@field.type}"), "javascript:void(0)", :id => "#{@field.type}", :class => "field_links sel" %> </li>
@@ -132,7 +132,7 @@
     <div class="medium-9 columns side-tab-content-container">
       <div class="side-tab-content">
         <div class="row">
-          <div class="medium-12 columns" data-equalizer-watch>
+          <div class="medium-12 columns">
             <div class="space"></div>
             <% @field ||= Field.new(:type => 'text_field') %>
             <%= error_messages_for  :field,
