--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -222,6 +222,11 @@ table.dataTable {
   }
 }
 
+div.db_name {
+  margin-top: 0.4rem;
+  font-size: 0.8125rem;
+}
+
 .translation {
   border-top: 1px solid $stroke_green_color;
   padding-top: 20px;
