Moved record status outside of scrolling sidebar nav

--- a/app/views/form_section/_tabs.html.erb
+++ b/app/views/form_section/_tabs.html.erb
@@ -4,9 +4,11 @@
     <% tabs.each do |form_group, forms| %>
       <%= build_form_tabs(form_group, forms, show_summary ||= false) %>
     <% end %>
-    <li>
-  		<%= yield :header_message %>
-    </li>
   </ul>
   <div class="scrolling_indicator down"><%= t('messages.scroll_down') %></div>
+  <ul class="tab-handles side-nav">
+    <li>
+      <%= yield :header_message %>
+    </li>
+  </ul>
 </div>
